--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,7 +17,6 @@ html {
 body {
     height: 100%;
     overflow: hidden;
-    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -57,6 +56,23 @@ input {
 a {
     color: inherit;
     text-decoration: none;
+}
+
+/* 设置滚动条的样式 */
+::-webkit-scrollbar {
+    width: 5px;
+    background-color: transparent;
+}
+
+/* 滚动槽 */
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+}
+
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: rgb(150, 202, 250);
 }
 
 .layout_center{
